# derrom

./: .gitignore  .readthedocs.yaml  AE_test.ipynb  CAE_test.ipynb  ELPH-ML.ipynb  ELPH-ML_DMD_test.ipynb  ELPH-ML_ELM.ipynb  ELPH-ML_NVAR.ipynb  ELPH-ML_NVAR_testmod.ipynb  ELPH-ML_PIML.ipynb  ELPH-ML_RDNLVAR.ipynb  ELPH-ML_RDNLVAR_ELM.ipynb  ELPH-ML_RDNLVAR_EML.ipynb  ELPH-ML_RDNLVAR_FFT.ipynb  ELPH-ML_RDNLVAR_NVAR.ipynb  ELPH-ML_RDNLregr.ipynb  ELPH-ML_SVD_truncation_error.ipynb  ELPH-ML_SVD_truncation_error_Bayesian_opt_weighted.ipynb  ELPH-ML_SVD_truncation_error_bay_opt_weighted_data.ipynb  ELPH-ML_VAR.ipynb  ELPH-ML_codimar_ELM.ipynb  ELPH-ML_codimar_NVAR.ipynb  ELPH-ML_narrom_PIML.ipynb  ELPH-ML_narrom_poly_features.ipynb  ELPH-ML_narrom_testbox.ipynb  ELPH-ML_noror_autoregression.ipynb  ELPH-ML_reconst_k_dependece.ipynb  ELPH-ML_reconstruction_k_dependence.ipynb  ELPH-ML_simulate_ELPH_dyn.ipynb  ELPH_ML_approx_k_dependence.ipynb  ELPH_ML_reconstruction_k_dependence.ipynb  ELPH_PIML.ipynb  ELPH_approx_k_dependence.ipynb  ELPH_autoregression.ipynb  ELPH_dim_reducer_benchmarking.ipynb  ELPH_predict_derivs.ipynb  ELPH_predict_temperature.ipynb  ELPH_simulate_wML.ipynb  ELPH_utils.py  Fermi_fit.ipynb  (+26 more)
.ipynb_checkpoints/: ELPH-ML-checkpoint.ipynb  ELPH-ML_NVAR-checkpoint.ipynb  ELPH-ML_SVD_truncation_error-checkpoint.ipynb  ELPH-ML_VAR-checkpoint.ipynb  ELPH-ML_simulate_ELPH_dyn-checkpoint.ipynb
AR_paper_figs/: ELM_features_optimization.ipynb  ELPH-ML_dataset.ipynb  ELPH-ML_poly_features_optimization.ipynb  ELPH-ML_poly_regression_r_dependence.ipynb  SVD_illustration.ipynb  dataset.ipynb  dynamics.ipynb  features_optimization.ipynb  training_data_dependence.ipynb
ELPH/: ELPH.py  ELPH_test.ipynb  ELPH_utils.py  PHELPH.py  PHELPH_test.ipynb  PHELPH_two_temperatures.ipynb  simulate_PHELPH.ipynb  simulate_w_derivs.ipynb
ELPH_AR_paper_figs/: autoregression_example.ipynb  dimensionality_reduction_benchmarking.ipynb  poly_features_optimization.ipynb  poly_features_rdim_dependence.ipynb  (+1 more)
derrom/: __init__.py  (+10 more)
(+156 files in other folders)
