[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "derrom"
version = "0.1"
authors = [
  { name="Stefan Meinecke", email="stefan.meinecke@posteo.de" },
]
description = "Delay Embedded Regressive Reduced Order Model "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stmeinecke/derrom"
