[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "derrom"
version = "0.2"
authors = [
  { name="Stefan Meinecke", email="stefan.meinecke@posteo.de" },
  { name="Felix Köster", email="Felix-Koester@hotmail.com" },
]
description = "Derrom is a delay embedded regressive reduced order model "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
"Homepage" = "https://github.com/stmeinecke/derrom"
